--- a/poem-challenge.html
+++ b/poem-challenge.html
@@ -13,7 +13,7 @@
 
     <body>
     <h1>Plastic</h1>
-    <p>I work in an environment that is constantly aware of waste and everyone is always looking for ways to waste less. People ask me for straws and because they're already supposed to be aware that they're in a "social business," I tell them we do not use straws (because straws are a commodity made of plastic that apart from making drinks easier to sip, they just pollute). It's actually cool, because customers immediately realize how wasteful straws can be (if made of plastic)<br></p>
+    <p>I work in an environment that is constantly aware of waste and everyone is always looking for ways to waste less. People ask me for straws and because they're already supposed to be aware that they're in a "social business," I tell them we do not use straws (because straws are a commodity made of plastic that apart from making drinks easier to sip, they just pollute). It's actually cool, because customers immediately realize how wasteful straws can be (if made of plastic).<br></p>
     <p>I came to Old San Juan today for the first time in a long time, to spend time studying at school, and stopped by a coffee shop to get some food.<br></p>
     <p>I notice all the plastic. I said I would eat in shoppe, and they misunderstood, they gave me a plastic container for my wrap, in a plastic bag with plastic silverware. I bought a bag of ground coffee which they placed in a separate plasic bag by itself.<br></p>
     <p>I had a backpack on my back, at work we have people bring their excess plastic bags from home so that the people who don't bring their own reusable containers can place what they want to buy without having to bring more plastic into the world.<br></p>
