more line space code added
more line space added to the first paragraph

--- a/image-insert.html
+++ b/image-insert.html
@@ -7,7 +7,7 @@
     <body>
         <h1>The Perfect Trip</h1>
 
-        <p>In my "perfect trip" I would not only be able to sleep in every day on a super<br> comfy bed within a beautiful space that I found on airbnb.com for an excellent price/night, but it would also have a full kitchen and a library, and there would be a really awesome marketplace nearby that would<br> give me access to all kinds of fresh, local products<br> so I could make myself breakfast, and other meals if need be. There would an ocean nearby, maybe where I am envisioning being in a cottage somewhere in<br> a small town in Europe that is close to the Mediterranean.<br>  </p>
+        <p>In my "perfect trip" I would not only be able to sleep in every day on a super<br> comfy bed within a beautiful space that I found on airbnb.com for an excellent<br> price/night, but it would also have a full kitchen and a library, and there would be a really awesome marketplace nearby that would<br> give me access to all kinds of fresh, local products<br> so I could make myself breakfast, and other meals if need be. <br>There would an ocean nearby, maybe where I am envisioning being in a cottage somewhere in<br> a small town in Europe that is close to the Mediterranean.<br>  </p>
         <img src="https://www.kasandbox.org/programming-images/landscapes/sand-dunes.png" alt="sand dunes blue sky and wild growing grass being moved by wind" width="400">
 
         <p>I don't really care much about animals, as far as exotic ones go and having access to them. I love all animals, but for some reason, cats hold an extra special place in my heart. In my ideal vacation it'd be awesome if there were some kittens around, full-grown cats would be ok too. </p>
